--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ Thumbs.db
 .vs/SNF-Procurement/FileContentIndex/65330924-952f-4b6b-9654-e2e4ac364f95.vsidx
 .vs/SNF-Procurement/FileContentIndex/942cf215-8649-4d47-9fb8-3c5640438988.vsidx
 .vs/SNF-Procurement/FileContentIndex/90a3c2d4-536f-46c6-8dda-cef5d6e97ad8.vsidx
+
+
+#vscode
+.vscode/
