--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/localize": "^20.2.0",
     "@types/jasmine": "~5.1.0",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
